# cmake-error-export

./: CMakeLists.txt
include/core/: A.h
src/: CMakeLists.txt  E.h  main.cpp
